--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://soradimichi.github.io/active-citizen-poet-2025-frontend/",
   "name": "active-citizen-poet-2025-frontend",
   "version": "0.1.0",
   "private": true,
@@ -19,7 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,3 +49,4 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
+
