--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://soradimichi.github.io/active-citizen-poet-2025-frontend/",
   "name": "active-citizen-poet-2025-frontend",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.1.0",
     "ghpages": "^0.0.10",
+    "postcss-loader": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -17,7 +17,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -50,4 +50,3 @@
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
-
