--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,12 @@
     ],
     "rules": {
         "react/prop-types": ["off"],
+        "no-plusplus": [
+            "error",
+            {
+                "allowForLoopAfterthoughts": true
+            }
+        ],
         "no-underscore-dangle": [
             "error",
             {
